<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Login">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:fontFamily="@font/roboto_black"
        android:textSize="40sp"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/inputLogin_LoginPage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        tools:layout_editor_absoluteX="29dp">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLogin_LoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableEnd="@drawable/ic_user_for_login"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPass_LoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLogin_LoginPage"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLayoutPasswordSignIn"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/roboto_medium"
            android:drawableEnd="@drawable/ic_pass_for_login"
            android:layout_marginRight="30dp"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForLogin_LoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/login_btn"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass_LoginPage" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:id="@+id/txtSignUp"
        android:layout_height="wrap_content"
        android:text="@string/text_for_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForLogin_LoginPage"
        app:layout_constraintVertical_bias="0.13">

    </com.google.android.material.textview.MaterialTextView>
</androidx.constraintlayout.widget.ConstraintLayout>