<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignUp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:text="@string/sign_up_title"
        android:textColor="@color/red"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLogin_SignUpPage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        tools:layout_editor_absoluteX="29dp">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLogin_SignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.280"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoginText_SignUpPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableEnd="@drawable/ic_user_for_login"
            android:padding="15dp"
            android:hint="@string/username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputMail_SignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLogin_SignUpPage"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/inputEmailText_SignUpPage"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/roboto_medium"
            android:drawableEnd="@drawable/ic_mail_for_sign_up"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPass_SignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMail_SignUpPage"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:id="@+id/inputPasswordText_SignUpPage"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/roboto_medium"
            android:drawableEnd="@drawable/ic_pass_for_login"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRepeatPass_SignUpPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass_SignUpPage"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/inputPasswordRepeatText_SignUpPage"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/roboto_medium"
            android:drawableEnd="@drawable/ic_pass_for_login"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:hint="@string/repeat_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForLogin_SignUpPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/sign_up_btn"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRepeatPass_SignUpPage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForLogin_SignUpPage"
        app:layout_constraintVertical_bias="0.165">

    </com.google.android.material.textview.MaterialTextView>



</androidx.constraintlayout.widget.ConstraintLayout>