...
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post">New post</string>
    <string name="write_post_button">Write post</string>
    <string name="text_of_post">Text of post</string>
    <string name="required_text">Text of post is required and must be 6-256 symbols</string>
    <string name="title_of_post">Title of post</string>
    <string name="max_size_for_title">Max. size of title - 64</string>
</resources>
