...
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:gravity="left"
                android:textSize="15sp"
                android:id="@+id/txtTextTitleAdd"
                android:padding="8dp"
                android:background="@drawable/txt_background"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
...
                android:textSize="15sp"
                android:id="@+id/txtTextPostAdd"
                android:padding="8dp"
                android:background="@drawable/txt_background"/>

            <Button
                android:id="@+id/btnAddPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/write_post_button"
                app:backgroundTint="@color/red"
...
